--- a/src/FXML/Useless.fxml
+++ b/src/FXML/Useless.fxml
@@ -1,11 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1">
-    
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <ScrollPane layoutX="57.0" layoutY="73.0" prefHeight="223.0" prefWidth="487.0">
+         <content>
+            <HBox fx:id="hbox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseDragged="#hboxDraggedAction" onMousePressed="#hboxPressAction" prefHeight="330.0" prefWidth="2750.0" spacing="50.0">
+               <children>
+                  <ImageView fitHeight="230.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../picturepackage/ChooseMode.jpg" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="300.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../picturepackage/ChooseMode.jpg" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="300.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../picturepackage/ChooseMode.jpg" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="300.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../picturepackage/ChooseMode.jpg" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="300.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../picturepackage/ChooseMode.jpg" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="300.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../picturepackage/ChooseMode.jpg" />
+                     </image>
+                  </ImageView>
+               </children>
+            </HBox>
+         </content>
+      </ScrollPane>
+   </children>
 </AnchorPane>
