--- a/src/Main/Board.fxml
+++ b/src/Main/Board.fxml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane id="AnchorPane" fx:id="container" prefHeight="588.0" prefWidth="1038.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.BoardController">
    <children>
-      <ImageView fx:id="imageView" fitHeight="588.0" fitWidth="1038.0" layoutX="113.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ImageView fx:id="imageView" fitHeight="588.0" fitWidth="1038.0" layoutX="113.0" layoutY="22.0" onMouseClicked="#imageClickAction" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <image>
             <Image url="@../PictureBall/Board/Board-1.png" />
          </image>
       </ImageView>
+      <Label fx:id="label" layoutX="394.0" layoutY="405.0" prefHeight="50.0" prefWidth="250.0" textFill="#006aff" />
    </children>
 </AnchorPane>
