Project is merged with UTSA Signed-off-by:Md Mehedi Hasan <ASUS@LAPTOP-VAHIIH23.workgroup>

--- a/src/FXML/StartGamePage.fxml
+++ b/src/FXML/StartGamePage.fxml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import java.lang.String?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="choosemodepane" prefHeight="675.0" prefWidth="1350.0" styleClass="bodybg" stylesheets="@../cssstylepackage/ModeChoosingStyles.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXML.StartGamePageController">
+<AnchorPane id="AnchorPane" fx:id="choosemodepane" prefHeight="800.0" prefWidth="1500.0" styleClass="bodybg" stylesheets="@../cssstylepackage/ModeChoosingStyles.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXML.StartGamePageController">
    <children>
-      <HBox layoutX="221.0" layoutY="311.0" spacing="30.0">
+      <ImageView fx:id="backGroundImage" fitHeight="802.0" fitWidth="1499.0" pickOnBounds="true">
+         <image>
+            <Image url="@../picturepackage/ChooseMode.jpg" />
+         </image>
+      </ImageView>
+      <HBox layoutX="345.0" layoutY="423.0" spacing="30.0">
          <children>
-            <JFXButton fx:id="offlinePlayButton" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" ellipsisString="" layoutX="236.0" layoutY="322.0" onAction="#offlinePlayAction" prefHeight="139.0" prefWidth="242.0" ripplerFill="#80b907" stylesheets="@../cssstylepackage/ModeChoosingStyles.css" text="Offline Play" textAlignment="CENTER" textFill="#6e5050">
+            <JFXButton fx:id="offlinePlayButton" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" ellipsisString="" layoutX="236.0" layoutY="322.0" onAction="#offlinePlayAction" onMouseReleased="#offlineReleasedAction" prefHeight="139.0" prefWidth="242.0" ripplerFill="#80b907" stylesheets="@../cssstylepackage/ModeChoosingStyles.css" text="Offline Play" textAlignment="CENTER" textFill="#6e5050">
                <font>
                   <Font name="System Italic" size="36.0" />
                </font>
@@ -21,7 +26,7 @@
                   <String fx:value=".button:pressed" />
                </styleClass>
             </JFXButton>
-            <JFXButton fx:id="onlinePlayButton" buttonType="RAISED" ellipsisString="" layoutX="507.0" layoutY="322.0" onAction="#onlinePlayAction" prefHeight="139.0" prefWidth="242.0" ripplerFill="#80b907" stylesheets="@../cssstylepackage/ModeChoosingStyles.css" text="Online Play" textFill="#6e5050">
+            <JFXButton fx:id="onlinePlayButton" buttonType="RAISED" ellipsisString="" layoutX="507.0" layoutY="322.0" onAction="#onlinePlayAction" onMouseReleased="#onlineRealeasedAction" prefHeight="139.0" prefWidth="242.0" ripplerFill="#80b907" stylesheets="@../cssstylepackage/ModeChoosingStyles.css" text="Online Play" textFill="#6e5050">
                <font>
                   <Font name="System Italic" size="36.0" />
                </font>
@@ -30,7 +35,7 @@
                   <String fx:value=".button:pressed" />
                </styleClass>
             </JFXButton>
-            <JFXButton fx:id="practiceButton" buttonType="RAISED" ellipsisString="" layoutX="807.0" layoutY="322.0" onAction="#practiceAction" prefHeight="139.0" prefWidth="242.0" ripplerFill="#80b907" stylesheets="@../cssstylepackage/ModeChoosingStyles.css" text="Practice" textFill="#6e5050">
+            <JFXButton fx:id="practiceButton" buttonType="RAISED" ellipsisString="" layoutX="807.0" layoutY="322.0" onAction="#practiceAction" onMouseReleased="#practiceReleasedAction" prefHeight="139.0" prefWidth="242.0" ripplerFill="#80b907" stylesheets="@../cssstylepackage/ModeChoosingStyles.css" text="Practice" textFill="#6e5050">
                <font>
                   <Font name="System Italic" size="36.0" />
                </font>
@@ -41,7 +46,7 @@
             </JFXButton>
          </children>
       </HBox>
-      <JFXButton fx:id="backButton" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" ellipsisString="" layoutX="59.0" layoutY="572.0" onAction="#backAction" prefHeight="77.0" prefWidth="154.0" ripplerFill="#80b907" style="-fx-background-color: #73c8a9;" stylesheets="@../cssstylepackage/ModeChoosingStyles.css" text="Back" textAlignment="CENTER" textFill="WHITE">
+      <JFXButton fx:id="backButton" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" ellipsisString="" layoutX="85.0" layoutY="689.0" onAction="#backAction" onMouseReleased="#backReleasedAction" prefHeight="77.0" prefWidth="154.0" ripplerFill="#80b907" style="-fx-background-color: #73c8a9;" stylesheets="@../cssstylepackage/ModeChoosingStyles.css" text="Back" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="System Italic" size="36.0" />
          </font>
