--- a/src/FXML/OptionPage.fxml
+++ b/src/FXML/OptionPage.fxml
@@ -1,33 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import com.jfoenix.controls.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXToggleButton?>
+<?import java.lang.String?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="settingpane" prefHeight="675.0" prefWidth="1350.0" styleClass="bodybg" stylesheets="@../cssstylepackage/SettingPageStyle.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXML.OptionPageController">
+<AnchorPane id="AnchorPane" fx:id="settingpane" prefHeight="800.0" prefWidth="1500.0" styleClass="bodybg" stylesheets="@../cssstylepackage/SettingPageStyle.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXML.OptionPageController">
    <children>
-      <ImageView fitHeight="67.0" fitWidth="81.0" layoutX="301.0" layoutY="369.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../picturepackage/gamesoundicon.png" />
-         </image>
-      </ImageView>
-      <Label alignment="CENTER" layoutX="437.0" layoutY="362.0" prefHeight="81.0" prefWidth="151.0" style="-fx-background-color: #6F9Fd8;" text="soundLabel" textFill="#0715dd">
-         <font>
-            <Font size="40.0" />
-         </font>
-      </Label>
-      <JFXToggleButton fx:id="soundButton" layoutX="623.0" layoutY="341.0" onAction="#toggleSound" prefHeight="124.0" prefWidth="217.0" selected="true" size="20.0" text="ON" textFill="#055704" toggleColor="#0ae1cb" toggleLineColor="#0909ee">
-         <font>
-            <Font size="36.0" />
-         </font>
-      </JFXToggleButton>
-      <JFXButton fx:id="backButton" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" ellipsisString="" layoutX="69.0" layoutY="582.0" onAction="#backAction" prefHeight="77.0" prefWidth="154.0" ripplerFill="#80b907" style="-fx-background-color: #73c8a9;" stylesheets="@../cssstylepackage/ModeChoosingStyles.css" text="Back" textAlignment="CENTER" textFill="WHITE">
+      <VBox layoutX="476.0" layoutY="338.0" spacing="40.0">
+         <children>
+            <HBox alignment="CENTER" spacing="80.0">
+               <children>
+                  <ImageView fitHeight="67.0" fitWidth="81.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../picturepackage/gamesoundicon.png" />
+                     </image>
+                  </ImageView>
+                  <Label alignment="CENTER" prefHeight="82.0" prefWidth="154.0" style="-fx-background-color: #6F9Fd8;" text="Sound" textFill="#0715dd">
+                     <font>
+                        <Font size="40.0" />
+                     </font>
+                  </Label>
+                  <JFXToggleButton fx:id="soundButton" onAction="#toggleSound" prefHeight="124.0" prefWidth="217.0" selected="true" size="20.0" text="ON" textFill="#055704" toggleColor="#0ae1cb" toggleLineColor="#0909ee">
+                     <font>
+                        <Font size="36.0" />
+                     </font>
+                  </JFXToggleButton>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" spacing="80.0">
+               <children>
+                  <ImageView fitHeight="67.0" fitWidth="81.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../picturepackage/musicicon.png" />
+                     </image>
+                  </ImageView>
+                  <Label alignment="CENTER" prefHeight="81.0" prefWidth="151.0" style="-fx-background-color: #6F9Fd8;" text="Music" textFill="#4008f8">
+                     <font>
+                        <Font size="40.0" />
+                     </font>
+                  </Label>
+                  <JFXToggleButton fx:id="musicButton" onAction="#toggleMusic" prefHeight="124.0" prefWidth="217.0" selected="true" size="20.0" text="ON" textFill="#055704" toggleColor="#0ae1cb" toggleLineColor="#0909ee">
+                     <font>
+                        <Font size="36.0" />
+                     </font>
+                  </JFXToggleButton>
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+      <JFXButton fx:id="backButton" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" ellipsisString="" layoutX="67.0" layoutY="678.0" onAction="#backAction" prefHeight="77.0" prefWidth="154.0" ripplerFill="#80b907" style="-fx-background-color: #73c8a9;" stylesheets="@../cssstylepackage/ModeChoosingStyles.css" text="Back" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="System Italic" size="36.0" />
          </font>
@@ -36,20 +64,5 @@
             <String fx:value=".button:pressed" />
          </styleClass>
       </JFXButton>
-      <Label alignment="CENTER" layoutX="437.0" layoutY="488.0" prefHeight="81.0" prefWidth="151.0" style="-fx-background-color: #6F9Fd8;" text="musicLabel" textFill="#4008f8">
-         <font>
-            <Font size="40.0" />
-         </font>
-      </Label>
-      <JFXToggleButton fx:id="musicButton" layoutX="623.0" layoutY="467.0" onAction="#toggleMusic" prefHeight="124.0" prefWidth="217.0" selected="true" size="20.0" text="ON" textFill="#055704" toggleColor="#0ae1cb" toggleLineColor="#0909ee">
-         <font>
-            <Font size="36.0" />
-         </font>
-      </JFXToggleButton>
-      <ImageView fitHeight="67.0" fitWidth="81.0" layoutX="301.0" layoutY="495.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../picturepackage/musicicon.png" />
-         </image>
-      </ImageView>
    </children>
 </AnchorPane>
