--- a/src/FXML/SelectionPage.fxml
+++ b/src/FXML/SelectionPage.fxml
@@ -1,79 +1,239 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.scene.image.*?>
-<?import java.net.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.geometry.*?>
-<?import com.jfoenix.controls.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import java.lang.String?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.effect.InnerShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="675.0" prefWidth="1350.0" stylesheets="@../cssstylepackage/Startpagestyles.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXML.SelectionPageController">
+<AnchorPane fx:id="selectionPagePane" prefHeight="800.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXML.SelectionPageController">
    <children>
-      <AnchorPane focusTraversable="true" layoutX="494.0" layoutY="116.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="362.0" stylesheets="@../cssstylepackage/SelectionPage.css" AnchorPane.bottomAnchor="518.0" AnchorPane.leftAnchor="494.0" AnchorPane.rightAnchor="494.0" AnchorPane.topAnchor="116.0">
+      <ImageView fitHeight="804.0" fitWidth="1502.0" pickOnBounds="true">
+         <image>
+            <Image url="@../picturepackage/SelectonPageImage.jpg" />
+         </image>
+      </ImageView>
+      <AnchorPane focusTraversable="true" layoutX="560.0" layoutY="121.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="134.0" prefWidth="359.0" stylesheets="@../cssstylepackage/SelectionPage.css" AnchorPane.bottomAnchor="549.0" AnchorPane.leftAnchor="560.0" AnchorPane.rightAnchor="583.0" AnchorPane.topAnchor="121.0">
          <children>
-            <JFXButton fx:id="gameBoardTab" buttonType="RAISED" onAction="#gameBoardTabPressedAction" prefHeight="50.0" prefWidth="220.0" text="Table" />
             <JFXButton fx:id="cueTab" buttonType="RAISED" layoutX="135.0" onAction="#cueTabPressedAction" prefHeight="50.0" prefWidth="220.0" text="Cue">
                <effect>
                   <InnerShadow color="#182816" />
                </effect>
             </JFXButton>
+            <JFXButton fx:id="gameBoardTab" buttonType="RAISED" onAction="#gameBoardTabPressedAction" prefHeight="50.0" prefWidth="220.0" text="Table" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="32.0" layoutY="251.0" prefHeight="330.0" prefWidth="1250.0" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0">
-         <children>
-            <HBox fx:id="hbox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseDragged="#hboxDraggedAction" onMousePressed="#hboxDragEnterAction" prefHeight="330.0" prefWidth="2750.0" spacing="50.0">
+      <ScrollPane fx:id="tablePane" hbarPolicy="NEVER" layoutY="250.0" pannable="true" prefHeight="330.0" prefWidth="1395.0" vbarPolicy="NEVER" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0">
+         <content>
+            <AnchorPane layoutX="50.0" layoutY="5.0" prefHeight="330.0" prefWidth="2750.0">
                <children>
-                  <AnchorPane>
+                  <ImageView fitHeight="340.0" fitWidth="2750.0" layoutY="-10.0" opacity="0.93" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../picturepackage/tablebackground.p.png" />
+                     </image>
+                  </ImageView>
+                  <HBox layoutX="20.0" prefHeight="330.0" prefWidth="2750.0" spacing="50.0">
                      <children>
-                        <ImageView fitHeight="230.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../picturepackage/ChooseMode.jpg" />
-                           </image>
-                        </ImageView>
-                        <Label layoutX="101.0" layoutY="264.0" prefHeight="50.0" prefWidth="156.0" text="Dark table">
-                           <font>
-                              <Font size="33.0" />
-                           </font>
-                        </Label>
+                        <AnchorPane prefHeight="330.0" prefWidth="400.0">
+                           <children>
+                              <Label contentDisplay="CENTER" layoutX="104.0" layoutY="249.0" prefHeight="58.0" prefWidth="165.0" text="Green Forrest" textFill="#f5f2f2">
+                                 <font>
+                                    <Font size="27.0" />
+                                 </font>
+                              </Label>
+                              <ImageView fx:id="board1" fitHeight="230.0" fitWidth="400.0" onMouseClicked="#board1SelectAction" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../picturepackage/Board-1.jpg" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane prefHeight="330.0" prefWidth="400.0">
+                           <children>
+                              <Label contentDisplay="CENTER" layoutX="104.0" layoutY="249.0" prefHeight="58.0" prefWidth="165.0" text="Green Forrest" textFill="#f5f2f2">
+                                 <font>
+                                    <Font size="27.0" />
+                                 </font>
+                              </Label>
+                              <ImageView fx:id="board2" fitHeight="230.0" fitWidth="400.0" onMouseClicked="#board2SelectAction" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../picturepackage/Table-2.jpg" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane prefHeight="330.0" prefWidth="400.0">
+                           <children>
+                              <Label contentDisplay="CENTER" layoutX="104.0" layoutY="249.0" prefHeight="58.0" prefWidth="165.0" text="Green Forrest" textFill="#f5f2f2">
+                                 <font>
+                                    <Font size="27.0" />
+                                 </font>
+                              </Label>
+                              <ImageView fx:id="board3" fitHeight="230.0" fitWidth="400.0" onMouseClicked="#board3SelectAction" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../picturepackage/Board-3.jpg" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane prefHeight="330.0" prefWidth="400.0">
+                           <children>
+                              <Label contentDisplay="CENTER" layoutX="104.0" layoutY="249.0" prefHeight="58.0" prefWidth="165.0" text="Green Forrest" textFill="#f5f2f2">
+                                 <font>
+                                    <Font size="27.0" />
+                                 </font>
+                              </Label>
+                              <ImageView fx:id="board4" fitHeight="230.0" fitWidth="400.0" onMouseClicked="#board4SelectAction" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../picturepackage/Board-4.jpg" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane prefHeight="330.0" prefWidth="400.0">
+                           <children>
+                              <Label contentDisplay="CENTER" layoutX="104.0" layoutY="249.0" prefHeight="58.0" prefWidth="165.0" text="Green Forrest" textFill="#f5f2f2">
+                                 <font>
+                                    <Font size="27.0" />
+                                 </font>
+                              </Label>
+                              <ImageView fx:id="board5" fitHeight="230.0" fitWidth="400.0" onMouseClicked="#board5SelectAction" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../picturepackage/Board-5.jpg" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane prefHeight="330.0" prefWidth="400.0">
+                           <children>
+                              <Label contentDisplay="CENTER" layoutX="104.0" layoutY="249.0" prefHeight="58.0" prefWidth="165.0" text="Green Forrest" textFill="#f5f2f2">
+                                 <font>
+                                    <Font size="27.0" />
+                                 </font>
+                              </Label>
+                              <ImageView fx:id="board6" fitHeight="230.0" fitWidth="400.0" onMouseClicked="#board6SelectAction" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../picturepackage/Board-6.jpg" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </AnchorPane>
                      </children>
-                  </AnchorPane>
-                  <AnchorPane>
-                     <children>
-                        <ImageView fitHeight="300.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../picturepackage/ChooseMode.jpg" />
-                           </image>
-                        </ImageView>
-                     </children>
-                  </AnchorPane>
-                  <ImageView fitHeight="300.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../picturepackage/ChooseMode.jpg" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="300.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../picturepackage/ChooseMode.jpg" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="300.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../picturepackage/ChooseMode.jpg" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="300.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../picturepackage/ChooseMode.jpg" />
-                     </image>
-                  </ImageView>
+                     <padding>
+                        <Insets top="20.0" />
+                     </padding>
+                  </HBox>
                </children>
-            </HBox>
-         </children></AnchorPane>
+            </AnchorPane>
+         </content>
+      </ScrollPane>
+      <ScrollPane fx:id="cuePane" hbarPolicy="NEVER" layoutX="249.0" layoutY="266.0" pannable="true" prefHeight="500.0" prefWidth="1000.0" vbarPolicy="NEVER">
+         <content>
+            <AnchorPane prefHeight="1450.0" prefWidth="1000.0">
+               <children>
+                  <ImageView fitHeight="1450.0" fitWidth="1005.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../picturepackage/cueBoardBackground.jpg" />
+                     </image>
+                  </ImageView>
+                  <VBox prefHeight="1450.0" prefWidth="1005.0" spacing="20.0">
+                     <children>
+                        <AnchorPane prefHeight="200.0" prefWidth="1005.0">
+                           <children>
+                              <ImageView fx:id="cue1" fitHeight="120.0" fitWidth="800.0" layoutX="90.0" layoutY="14.0" onMouseClicked="#cue1SelectAction" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../picturepackage/Cue-1.jpg" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane prefHeight="200.0" prefWidth="1005.0">
+                           <children>
+                              <ImageView fx:id="cue2" fitHeight="120.0" fitWidth="800.0" layoutX="90.0" layoutY="14.0" onMouseClicked="#cue2SelectAction" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../picturepackage/Cue-2.jpg" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane prefHeight="200.0" prefWidth="1005.0">
+                           <children>
+                              <ImageView fx:id="cue3" fitHeight="120.0" fitWidth="800.0" layoutX="90.0" layoutY="14.0" onMouseClicked="#cue3SelectAction" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../picturepackage/Cue-3.jpg" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane prefHeight="200.0" prefWidth="1005.0">
+                           <children>
+                              <ImageView fx:id="cue4" fitHeight="120.0" fitWidth="800.0" layoutX="90.0" layoutY="14.0" onMouseClicked="#cue4SelectAction" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../picturepackage/Cue-4.jpg" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane prefHeight="200.0" prefWidth="1005.0">
+                           <children>
+                              <ImageView fx:id="cue5" fitHeight="120.0" fitWidth="800.0" layoutX="90.0" layoutY="14.0" onMouseClicked="#cue5SelectAction" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../picturepackage/Cue-5.jpg" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane prefHeight="200.0" prefWidth="1005.0">
+                           <children>
+                              <ImageView fx:id="cue6" fitHeight="120.0" fitWidth="800.0" layoutX="90.0" layoutY="14.0" onMouseClicked="#cue6SelectAction" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../picturepackage/Cue-6.jpg" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane prefHeight="200.0" prefWidth="1005.0">
+                           <children>
+                              <ImageView fx:id="cue7" fitHeight="120.0" fitWidth="800.0" layoutX="90.0" layoutY="14.0" onMouseClicked="#cue7SelectAction" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../picturepackage/Cue-7.jpg" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </AnchorPane>
+                     </children>
+                     <padding>
+                        <Insets top="20.0" />
+                     </padding>
+                  </VBox>
+               </children>
+            </AnchorPane>
+         </content>
+      </ScrollPane>
+      <JFXButton fx:id="backButton" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" ellipsisString="" layoutX="39.0" layoutY="699.0" onAction="#backAction" prefHeight="77.0" prefWidth="154.0" ripplerFill="#80b907" stylesheets="@../cssstylepackage/ModeChoosingStyles.css" text="Back" textAlignment="CENTER" textFill="WHITE">
+         <font>
+            <Font name="System Italic" size="36.0" />
+         </font>
+         <styleClass>
+            <String fx:value=".button:hover" />
+            <String fx:value=".button:pressed" />
+         </styleClass>
+      </JFXButton>
+      <JFXButton fx:id="playButton" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" ellipsisString="" layoutX="1317.0" layoutY="696.0" onAction="#playAction" prefHeight="77.0" prefWidth="154.0" ripplerFill="#80b907" stylesheets="@../cssstylepackage/ModeChoosingStyles.css" text="Play" textAlignment="CENTER" textFill="WHITE">
+         <font>
+            <Font name="System Italic" size="36.0" />
+         </font>
+         <styleClass>
+            <String fx:value=".button:hover" />
+            <String fx:value=".button:pressed" />
+         </styleClass>
+      </JFXButton>
    </children>
 </AnchorPane>
