--- a/src/FXML/StartPage.fxml
+++ b/src/FXML/StartPage.fxml
@@ -1,38 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.text.*?>
 <?import com.jfoenix.controls.*?>
 <?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="rootpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="675.0" prefWidth="1350.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXML.StartPageController">
+<AnchorPane fx:id="rootpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXML.StartPageController">
    <children>
-      <AnchorPane fx:id="subPane" layoutX="37.0" layoutY="42.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="675.0" prefWidth="1350.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane fx:id="subPane" layoutX="37.0" layoutY="42.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="675.0" prefWidth="1350.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <ImageView fx:id="backgroundImage" fitHeight="675.0" fitWidth="1350.0" pickOnBounds="true">
+            <ImageView fx:id="backGroundImage" fitHeight="799.0" fitWidth="1499.0" pickOnBounds="true" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="0.0">
                <image>
                   <Image url="@../picturepackage/FrontPageImage.jpg" />
                </image>
             </ImageView>
-            <VBox fx:id="startbutton" alignment="CENTER" layoutX="556.0" layoutY="349.0" spacing="20.0">
+            <VBox fx:id="startbutton" alignment="CENTER" layoutX="556.0" layoutY="349.0" spacing="20.0" AnchorPane.bottomAnchor="53.19999999999999" AnchorPane.leftAnchor="556.0" AnchorPane.rightAnchor="555.6" AnchorPane.topAnchor="349.0">
                <children>
-                  <JFXButton alignment="CENTER" buttonType="RAISED" layoutX="454.0" layoutY="229.0" onAction="#startGameAction" prefHeight="75.0" prefWidth="238.0" stylesheets="@../cssstylepackage/Startpagestyles.css" text="Start Game">
+                  <JFXButton alignment="CENTER" buttonType="RAISED" layoutX="454.0" layoutY="229.0" onAction="#startGameAction" onMouseReleased="#ReleasedAction" prefHeight="75.0" prefWidth="238.0" stylesheets="@../cssstylepackage/Startpagestyles.css" text="Start Game">
                      <font>
                         <Font name="System Italic" size="36.0" />
                      </font>
                   </JFXButton>
-                  <JFXButton fx:id="optionbutton" alignment="CENTER" buttonType="RAISED" layoutX="483.0" layoutY="329.0" onAction="#optionAction" prefHeight="77.0" prefWidth="179.0" stylesheets="@../cssstylepackage/Startpagestyles.css" text="Option">
+                  <JFXButton fx:id="optionbutton" alignment="CENTER" buttonType="RAISED" layoutX="483.0" layoutY="329.0" onAction="#optionAction" onMouseReleased="#ReleasedAction" prefHeight="77.0" prefWidth="179.0" stylesheets="@../cssstylepackage/Startpagestyles.css" text="Option">
                      <font>
                         <Font name="System Italic" size="36.0" />
                      </font>
                   </JFXButton>
-                  <JFXButton fx:id="exitbutton" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" layoutX="509.0" layoutY="424.0" onAction="#exitAction" prefHeight="77.0" prefWidth="127.0" stylesheets="@../cssstylepackage/Startpagestyles.css" text="Exit">
+                  <JFXButton fx:id="exitbutton" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" layoutX="509.0" layoutY="424.0" onAction="#exitAction" onMouseReleased="#ReleasedAction" prefHeight="77.0" prefWidth="127.0" stylesheets="@../cssstylepackage/Startpagestyles.css" text="Exit">
                      <font>
                         <Font name="System Italic" size="36.0" />
                      </font>
