All file are decorated successfully Signed-off-by:Md Mehedi Hasan <ASUS@LAPTOP-VAHIIH23.workgroup>

--- a/src/Main/GameComponent/CueStick/CueStick.fxml
+++ b/src/Main/GameComponent/CueStick/CueStick.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" fx:id="container" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.CueStickController">
+<AnchorPane id="AnchorPane" fx:id="container" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.GameComponent.CueStick.CueStickController">
    <children>
       <ImageView fx:id="cue" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" x="100.0" y="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <image>
